lintian (2.5.19) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * checks/files.pm:
    + [NT] Only open .pc files if they are regular files.
      This fixes a possible DoS introduced in 2.5.17.
  * checks/shared-libs.pm:
    + [NT] Correct the name of the multiarch-dirs data file,
      which was renamed in 2.5.17.

  * debian/changelog:
    + [NT] Mention in the 2.5.17 entry that multiarch-dirs
      data file was renamed.

 -- Niels Thykier <niels@thykier.net>  Sat, 21 Sep 2013 23:36:46 +0200

lintian (2.5.18) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - debian-changelog-has-wrong-weekday
      - debian-rules-missing-good-practice-target-dfsg
      - empty-udeb-package
      - file-name-in-PATH-is-not-ASCII
      - misplaced-extra-member-in-deb

  * checks/apache2.pm:
    + [NT] Fix false-positive warning about non-standard package
      name when the Apache2 module contained uppercase letters.
      Thanks to Jonas Smedegaard for the report.
      (Closes: #723003)
  * checks/changelog.{desc,pm}:
    + [NT] Check that the weekday of the latest changelog entry
      is consistent with the date.  Thanks to Raphael Champeimont
      for the report.  (Closes: #703407)
  * checks/cruft.{desc,pm}:
    + [BR] Fix false-postive for license-problem-gfdl-invariants.
      (Closes: #721252)
    + [BR] Extend tag description of the gfdl-invariants tag.
      (Closes: #722102)
  * checks/deb-format.{desc,pm}:
    + [NT] Support (but tag) unofficial members after the
      "debian-binary" member where allowed by dpkg.  These
      members will trigger misplaced-extra-member-in-deb tag.
      Thanks to Guillem Jover for the report and the feedback.
      (Closes: #718349)
  * checks/fields.{desc,pm}:
    + [NT] Warn about "?op=log" in svn.d.o brower links.  Thanks
      to Paul Wise for the report.  (Closes: #707700)
    + [NT] Fix false-positive dbg-package-missing-depends for